<resources>
    <string name="app_name">CoeusPinger</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home">Home</string>
    <string name="ping">Ping</string>

    <string name="label_scan">Scan</string>
    <string name="label_connect">Connect</string>
    <string name="label_disconnect">Disconnect</string>
    <string name="label_detail">Detail</string>
    <string name="label_transfer">Transfer</string>
    <string name="label_status">Status:</string>
    <string name="label_mac">MAC:</string>
    <string name="label_ip">Owner IP:</string>
    <string name="label_go">Group Owner:</string>
    <string name="label_transfer_status">Transfer Status:</string>

    <string name="stub_mac">Stub MAC</string>
    <string name="stub_ip">Stub IP</string>
    <string name="stub_name">Stub Name</string>
    <string name="stub_status">Stub Status</string>
    <string name="stub_go">Stub Group Owner</string>
    <string name="stub_transfer_status">No activity</string>
    <string name="stub_label">Stub Label</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="last_seen">Last seen:</string>
    <string name="first_seen">First seen:</string>
    <string name="device_icon">Device Icon</string>

    <string name="action_settings">Settings</string>
    <string name="action_wifi_settings">Wifi Settings</string>
</resources>
